@@ -21,6 +21,8 @@ In Progress - Raffi This Better Work Edition
 - Armitage now sets ExitOnSession to false for multi/handlers started
   within Armitage.
 - Pivoting and ARP Scan dialogs now highlight first option by default.
+- Added a sanity check to the Route class to prevent malformed IPs
+  from screwing up sorting.
 
 17 Apr 11 - Change Log 
 ---------
